--- a/app/main/styles/main.scss
+++ b/app/main/styles/main.scss
@@ -25,4 +25,6 @@ $ionicons-font-path: "../assets/fonts" !default;
 // TODO: import scss files from other modules
 // @import "../../<module>/styles"
 
+@import "layout";
+
 
