--- a/app/main/templates/main.html
+++ b/app/main/templates/main.html
@@ -1,6 +1,6 @@
 <ion-view view-title="main module">
   <div class="bar bar-header bar-stable">
-    <h1 class="title">Pasquill</h1>
+    <h1 class="title">Color See</h1>
   </div>
   <ion-content>
     <div class="card">
