--- a/app/main/templates/main.html
+++ b/app/main/templates/main.html
@@ -5,11 +5,10 @@
   <ion-content>
     <div class="card">
       <img id="picture" class="full-image" src="/main/assets/images/blackwhite.jpg">
-      <!-- Colors extracted using http://lokeshdhakar.com/projects/color-thief/ -->
       <!-- Color names from http://www.computerhope.com/htmcolor.htm -->
       <div id="color-container" class="color-container card row">
         <div id="color" class="item col col-25" style="background-color:#0000cc;">&nbsp;</div>
-        <div id="color-label" class="item col col-75">Earth Blue</div>
+        <div id="color-name" class="item col col-75">Earth Blue</div>
       </div>
     </div>
   </ion-content>
