--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -4,6 +4,12 @@ html {
   font-family: 'Roboto Slab', serif;
 }
 
+md-content {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+}
+
 [layout=row] {
   flex-direction: row;
 }
@@ -15,14 +21,6 @@ html {
   padding: 0.2em 0;
 }
 
-.thumbnail {
-  height: 200px;
-
-  img.pull-right {
-    width: 50px;
-  }
-}
-
 md-toolbar.md-default-theme {
   background-color: black;
 }
@@ -30,29 +28,14 @@ md-toolbar.md-default-theme {
 section.jumbotron {
   margin-bottom: 30px;
   padding: 1px 30px;
-  background-color: #5aadbb;
+  background: url('../assets/images/confectionary.png');
   text-align: center;
-
-  color: white;
 
   h1 {
     font-size: 3em;
   }
 }
 
-.techs {
-  display: flex;
-  flex-flow: row wrap;
-
-  md-card {
-    width: 30%;
-
-    img.pull-right {
-      float: right;
-      width: 50px;
-    }
-  }
-}
 
 /* Do not remove this comments bellow. It's the markers used by gulp-inject to inject
    all your sass files automatically */
